--- a/AtmSystem/AtmSystem.csproj
+++ b/AtmSystem/AtmSystem.csproj
@@ -7,4 +7,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-preview.3.24172.9" />
+      <PackageReference Include="Spectre.Console" Version="0.49.2-preview.0.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\App\App.csproj" />
+      <ProjectReference Include="..\Terminal\Terminal.csproj" />
+    </ItemGroup>
+
 </Project>
